cmake_minimum_required(VERSION 3.0.2)
project(gyro)

find_package(catkin REQUIRED COMPONENTS
  rospy
  sensor_msgs
  std_msgs
)

catkin_package(
  CATKIN_DEPENDS rospy sensor_msgs std_msgs
)

include_directories(
  ${catkin_INCLUDE_DIRS}
)

catkin_install_python(PROGRAMS
  scripts/gyro.py
  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
)
